--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
   </head>
   <body>
 
+    <nav>
+      <ul>
+        <li>about me</li>
+        <li>skills</li>
+        <li>contact</li>
+      </ul>
+    </nav>
+
   </body>
 </html>
