--- a/index.html
+++ b/index.html
@@ -5,17 +5,53 @@
     <title>Sues Portfolio Website</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="script.js" charset="utf-8"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900|Playfair+Display:400,700|Prata|Shadows+Into+Light|Titillium+Web:300,400,900|Ubuntu:400,400i,500,700|Vidaloka" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|East+Sea+Dokdo|Kristi|Lato:300,400,900|Permanent+Marker|Playfair+Display:400,700|Prata|Rock+Salt|Shadows+Into+Light|Sue+Ellen+Francisco|Titillium+Web:300,400,900|Ubuntu:400,400i,500,700|Vidaloka" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
-    <nav>
-      <ul>
-        <li>about me</li>
-        <li>skills</li>
-        <li>contact</li>
-      </ul>
-    </nav>
+  <img src="../img/background-1921589_1920.jpg">
+      <nav>
+        <h3 class=logo>sue</h3>
+
+      <button class="hamburger" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+
+        <ul>
+          <li>about me</li>
+          <li>skills</li>
+          <li>contact</li>
+        </ul>
+
+      </nav>
+
+    <div class="intro">
+      <p>Susanne</p>
+      <p>Schütt</p>
+      <p>About Me</p>
+    </div>
+
+
+    <div class="white1"></div>
+    <div class="white2"></div>
+    <div class="border1"></div>
+  </img>
+
+  <section class="aboutMe">
+    <article>
+      
+    </article>
+
+    <article>
+
+    </article>
+  </section>
+
+
 
   </body>
 </html>
