intro ohne hamburger

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="intro">
       <p>Susanne</p>
       <p>Schütt</p>
-      <p>About Me</p>
+      <div class="border-section"></div>
+      <p class="sub">About Me</p>
     </div>
+
 
 
     <div class="white1"></div>
@@ -43,7 +45,7 @@
 
   <section class="aboutMe">
     <article>
-      
+
     </article>
 
     <article>
