about me section

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   </head>
   <body>
 
-  <img src="../img/background-1921589_1920.jpg">
+  <img class="bg" src="../img/background-1921589_1920.jpg">
       <nav>
+
         <h3 class=logo>sue</h3>
 
-      <button class="hamburger" type="button">
-        <span class="hamburger-box">
-          <span class="hamburger-inner"></span>
-        </span>
-      </button>
+        <button class="hamburger hamburger--squeeze" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
 
         <ul>
           <li>about me</li>
@@ -33,10 +34,10 @@
       <p>Susanne</p>
       <p>Schütt</p>
       <div class="border-section"></div>
-      <p class="sub">About Me</p>
     </div>
 
-
+    <p class="sub">About Me</p>
+    <!-- <p class="sub">About Me</p> -->
 
     <div class="white1"></div>
     <div class="white2"></div>
@@ -45,14 +46,39 @@
 
   <section class="aboutMe">
     <article>
-
+      <p class="headline">Hello, I am Sue. </p>
+      I am a higly motivated Frontend-Developer with a great passion for music, film & photography.
     </article>
 
-    <article>
+    <article class="text">
+      Despite of a big love for past times, my nostalgic side does not stop me from
+      following the path into future times. In order to express my creative pushes in the world wide web. Stress resistent I am able to work independently as well as I am happy to be
+      part of a porductive team.
 
+      <button class="btn">Download my CV</button>
     </article>
+
+
   </section>
 
+
+
+  <img class="strip" src="../img/sue2.png" alt="">
+  <img class="strip strip2" src="../img/sue1.png" alt="">
+
+  <div class="border1 border2"></div>
+
+  <section class="skills">
+      <img class="bg" src="../img/background-1921589_1920.jpg">
+    <div class="icons">
+      <div><i class="fab fa-html5"></i></div>
+      <div><i class="fab fa-css3"></i></div>
+      <div><i class="fab fa-sass"></i></div>
+      <div><i class="fab fa-js"></i></div>
+      <div><i class="fab fa-adobe"></i></div>
+    </div>
+  </img>
+  </section>
 
 
   </body>
