about me überarbeitet

--- a/index.html
+++ b/index.html
@@ -9,77 +9,60 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
+    <img class="bg" src="../img/background-1921589_1920.jpg">
 
-  <img class="bg" src="../img/background-1921589_1920.jpg">
-      <nav>
+    <nav>
+      <h3 class=logo>sue</h3>
 
-        <h3 class=logo>sue</h3>
+      <ul class="nav-list">
+        <li>about me</li>
+        <li>skills</li>
+        <li>contact</li>
+      </ul>
 
-        <button class="hamburger hamburger--squeeze" type="button">
-          <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-          </span>
-        </button>
+      <button class="hamburger hamburger--squeeze" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+    </nav>
 
-        <ul>
-          <li>about me</li>
-          <li>skills</li>
-          <li>contact</li>
-        </ul>
+    <section class="intro">
+        <div class="name">
+          <p>Susanne</p>
+          <p>Schütt</p>
+        </div>
+    </section>
 
-      </nav>
+    <section class="aboutMe">
+      <div class="elements">
+        <div class="white1"></div>
+        <div class="white2"></div>
+        <div class="border1"></div>
+      </div>
 
-    <div class="intro">
-      <p>Susanne</p>
-      <p>Schütt</p>
-      <div class="border-section"></div>
+      <p class="title-about">About Me</p>
+
+      <div class="flexbox">
+        <article class="sub-text">
+          <p class="headline">Hello, I am Sue. </p>
+          I am a higly motivated Frontend-Developer with a great passion for music, film & photography.
+        </article>
+
+        <article class="text">
+          Despite of a big love for past times, my nostalgic side does not stop me from
+          following the path into future times. In order to express my creative pushes in the world wide web. Stress resistent I am able to work independently as well as I am happy to be
+          part of a productive team.<br>
+        </article>
+      </div>
+    </section>
+
+    <div class=strips>
+      <img class="strip strip2" src="../img/sue1.png" alt="">
+      <img class="strip" src="../img/sue2.png" alt="">
     </div>
-
-    <p class="sub">About Me</p>
-    <!-- <p class="sub">About Me</p> -->
-
-    <div class="white1"></div>
-    <div class="white2"></div>
-    <div class="border1"></div>
-  </img>
-
-  <section class="aboutMe">
-    <article>
-      <p class="headline">Hello, I am Sue. </p>
-      I am a higly motivated Frontend-Developer with a great passion for music, film & photography.
-    </article>
-
-    <article class="text">
-      Despite of a big love for past times, my nostalgic side does not stop me from
-      following the path into future times. In order to express my creative pushes in the world wide web. Stress resistent I am able to work independently as well as I am happy to be
-      part of a porductive team.
-
-      <button class="btn">Download my CV</button>
-    </article>
-
-
-  </section>
-
-
-
-  <img class="strip" src="../img/sue2.png" alt="">
-  <img class="strip strip2" src="../img/sue1.png" alt="">
-
-  <div class="border1 border2"></div>
-
-  <section class="skills">
-      <img class="bg" src="../img/background-1921589_1920.jpg">
-    <div class="icons">
-      <div><i class="fab fa-html5"></i></div>
-      <div><i class="fab fa-css3"></i></div>
-      <div><i class="fab fa-sass"></i></div>
-      <div><i class="fab fa-js"></i></div>
-      <div><i class="fab fa-adobe"></i></div>
-    </div>
-  </img>
-  </section>
-
 
   </body>
 </html>
