skills css & html ohne text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="elements">
         <div class="white1"></div>
         <div class="white2"></div>
-        <div class="border1"></div>
+        <div class="border border1"></div>
       </div>
 
       <p class="title-about">About Me</p>
@@ -63,6 +63,35 @@
       <img class="strip strip2" src="../img/sue1.png" alt="">
       <img class="strip" src="../img/sue2.png" alt="">
     </div>
+
+    <section class="skills">
+      <div class="icons">
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-css3"></i>
+        <i class="fab fa-sass"></i>
+        <i class="fab fa-js"></i>
+        <i class="fab fa-adobe"></i>
+      </div>
+
+      <div class="icons">
+        <span>99%</span>
+        <span>89%</span>
+        <span>75%</span>
+        <span>69%</span>
+        <span>90%</span>
+      </div>
+
+      <p class="title-skills">skills</p>
+
+      <article class="text">
+        Despite of a big love for past times, my nostalgic side does not stop me from
+        following the path into future times. In order to express my creative pushes in the world wide web. Stress resistent I am able to work independently as well as I am happy to be
+        part of a productive team.<br>
+      </article>
+
+      <div class="border border2"></div>
+    </section>
+
 
   </body>
 </html>
