continued working on hamburger and nav-list

--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
     <meta charset="utf-8">
     <title>Sues Portfolio Website</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="script.js" charset="utf-8"></script>
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script> -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|East+Sea+Dokdo|Kristi|Lato:300,400,900|Permanent+Marker|Playfair+Display:400,700|Prata|Rock+Salt|Shadows+Into+Light|Sue+Ellen+Francisco|Titillium+Web:300,400,900|Ubuntu:400,400i,500,700|Vidaloka" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="styles.css">
+        <script src="script.js" charset="utf-8"></script>
   </head>
 
   <body>
-    <img class="bg" src="../img/background-1921589_1920.jpg">
-
+    <!-- <img class="bg" src="../img/background-1921589_1920.jpg"> -->
     <nav>
       <h3 class=logo>sue</h3>
 
       <ul class="nav-list">
         <li>about me</li>
+        <span></span>
         <li>skills</li>
+        <span></span>
         <li>contact</li>
+        <span></span>
       </ul>
 
-      <button class="hamburger hamburger--squeeze" type="button">
+      <button class="btn hamburger hamburger--squeeze" type="button">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
         </span>
@@ -59,10 +66,8 @@
       </div>
     </section>
 
-    <div class=strips>
-      <img class="strip strip2" src="../img/sue1.png" alt="">
-      <img class="strip" src="../img/sue2.png" alt="">
-    </div>
+    <img class="strip1" src="../img/sue2.png" alt="">
+    <img class="strip2" src="../img/sue1.png" alt="">
 
     <section class="skills">
       <div class="icons">
